# plover_config_wiz

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
plover_config_wiz/: __init__.py  markdown_widget.py  wizard.py
plover_config_wiz/page/: __init__.py  info.py  machine.py  plugin.py  serial.py  serial_detect.py  test.py
plover_config_wiz/resources/: infinity_ergonomic.json  keyboard.json  keyboard.md  procat_flash.json  procat_flash.md  stentura.json  stentura.md  treal.json
