[metadata]
name = plover_config_wiz
version = 0.1.0
description = Configuration wizard for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_config_wiz
project_urls =
	Source Code = https://github.com/benoit-pierre/plover_config_wiz
	Issue Tracker = https://github.com/benoit-pierre/plover_config_wiz/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = plover plover_plugin

[options]
include_package_data = True
python_requires = >=3.6
install_requires =
	plover[gui_qt]>=4.0.0.dev10
	plover_plugins_manager>=0.7.0
packages =
	plover_config_wiz
	plover_config_wiz.page

[options.entry_points]
plover.gui.qt.tool =
	config_wiz = plover_config_wiz.wizard:ConfigWiz

# vim: commentstring=#\ %s list
